--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="//chutsu.github.io/ditto/ver/latest/highlight.js"></script>
 
     <!-- DITTO -->
-    <link rel="stylesheet" href="//chutsu.github.io/ditto/ver/latest/ditto.css">
+    <link rel="stylesheet" href="css/ditto.css">
     <script src="//chutsu.github.io/ditto/ver/latest/ditto.js"></script>
 </head>
 <body>
