Update repo name

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
           ditto.sidebar_file = "sidebar.md",
           // optional settings if you want github search
           ditto.github_username = "Orcomp";   // <------- EDIT ME!!
-          ditto.github_repo = "Blog";        // <------- EDIT ME!!
+          ditto.github_repo = "Web.Log";        // <------- EDIT ME!!
           ditto.highlight_code = true;       // <------- EDIT ME!!
           // where the docs are actually stored on github - so you can edit
-          ditto.base_url = "https://github.com/Orcomp/blog/edit/gh-pages";
+          ditto.base_url = "https://github.com/Orcomp/web.log/edit/gh-pages";
           // run
           ditto.run();
         });
